--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=musicalInstrument
+management.endpoint.metrics.enabled = true
+management.endpoint.prometheus.enabled = true
+management.prometheus.metrics.export.enabled = true
+management.endpoints.web.exposure.include="info,health,metrics"
